[gd_scene load_steps=2 format=3 uid="uid://cwcam1ocxw8m2"]

[ext_resource type="Script" uid="uid://co13ck8kauahl" path="res://scenes/lock.gd" id="1_60jus"]

[node name="Lock" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_60jus")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -64.0
offset_right = 55.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="LockHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TumblerVBoxContainer" type="VBoxContainer" parent="VBoxContainer/LockHBoxContainer"]
layout_mode = 2

[node name="UpButton" type="Button" parent="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer"]
layout_mode = 2
text = "^"

[node name="Label" type="Label" parent="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer"]
layout_mode = 2
text = "a"
horizontal_alignment = 1

[node name="DownButton" type="Button" parent="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer"]
layout_mode = 2
text = "v"

[node name="TumblerVBoxContainer2" type="VBoxContainer" parent="VBoxContainer/LockHBoxContainer"]
layout_mode = 2

[node name="UpButton" type="Button" parent="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer2"]
layout_mode = 2
text = "^"

[node name="Label" type="Label" parent="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer2"]
layout_mode = 2
text = "b"
horizontal_alignment = 1

[node name="DownButton" type="Button" parent="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer2"]
layout_mode = 2
text = "v"

[node name="TumblerVBoxContainer3" type="VBoxContainer" parent="VBoxContainer/LockHBoxContainer"]
layout_mode = 2

[node name="UpButton" type="Button" parent="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer3"]
layout_mode = 2
text = "^"

[node name="Label" type="Label" parent="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer3"]
layout_mode = 2
text = "c"
horizontal_alignment = 1

[node name="DownButton" type="Button" parent="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer3"]
layout_mode = 2
text = "v"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "confirm"

[node name="ExitButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "exit"

[connection signal="pressed" from="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer/UpButton" to="." method="_on_up_button_pressed" binds= ["Tumbler1"]]
[connection signal="pressed" from="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer/DownButton" to="." method="_on_down_button_pressed" binds= ["Tumbler1"]]
[connection signal="pressed" from="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer2/UpButton" to="." method="_on_up_button_pressed" binds= ["Tumbler2"]]
[connection signal="pressed" from="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer2/DownButton" to="." method="_on_down_button_pressed" binds= ["Tumbler2"]]
[connection signal="pressed" from="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer3/UpButton" to="." method="_on_up_button_pressed" binds= ["Tumbler3"]]
[connection signal="pressed" from="VBoxContainer/LockHBoxContainer/TumblerVBoxContainer3/DownButton" to="." method="_on_down_button_pressed" binds= ["Tumbler3"]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/ExitButton" to="." method="_on_exit_button_pressed"]
